--- a/main.html
+++ b/main.html
@@ -8,9 +8,17 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
-<header class="">
+<header>
     <div class="head">
         <h1><a href="#"><img src="./images/logo_w.png" alt="AK 홀딩스 로고"><img src="./images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
+        <div class="quick-menu">
+            <ul>
+                <li><a href="#">그룹 소개</a></li>
+                <li><a href="#">애경 ESG</a></li>
+                <li><a href="#">뉴스룸</a></li>
+                <li><a href="#">IR</a></li>
+            </ul>
+        </div>
         <button class="btn-show-menu" id="btnShowMenu" />
     </div>
     <nav>
@@ -20,8 +28,8 @@
                 <ul>
                     <li>
                         <ul>
-                            <!-- 2뎁스 메뉴 활성화시 아래 li에 .active 추가 -->
-                            <li class="active"><a href="#">애경 가치</a></li>
+                            <!-- 메뉴 활성화시 아래 li에 .active 추가 -->
+                            <li><a href="#">애경 가치</a></li>
                             <li><a href="#">창업이념</a></li>
                             <li><a href="#">인재상</a></li>
                             <li><a href="#">가치체계도</a></li>
@@ -29,26 +37,31 @@
                             <li><a href="#">가치체계도</a></li>
                             <li><a href="#">미션과 비전</a></li>
                         </ul>
+                        <em></em>
                         <ul>
                             <li><a href="#">Corporate Identity</a></li>
                             <li><a href="#">의미</a></li>
                             <li><a href="#">로고 규정</a></li>
                         </ul>
+                        <em></em>
                         <ul>
                             <li><a href="#">회사 소개</a></li>
                             <li><a href="#">CEO Message</a></li>
                             <li><a href="#">홀딩스 역할</a></li>
                             <li><a href="#">거버넌스 구조</a></li>
                         </ul>
+                        <em></em>
                         <ul>
                             <li><a href="#">계열사 소개</a></li>
                         </ul>
+                        <em></em>
                         <ul>
                             <li><a href="#">연혁</a></li>
                         </ul>
                     </li>
                 </ul>
             </li>
+            <em></em>
             <li>
                 <h3><a href="#">애경 ESG</a></h3>
                 <ul>
@@ -61,27 +74,36 @@
                             <li><a href="#">ESG 추진체계(조직)</a></li>
                             <li><a href="#">지속가능경영 보고서</a></li>
                         </ul>
+                        <em></em>
                         <ul>
                             <li><a href="#">ESG 소식</a></li>
                         </ul>
+                        <em></em>
                         <ul>
                             <li><a href="#">윤리경영</a></li>
                             <li><a href="#">윤리제보관리시스템</a></li>
                         </ul>
+                        <em></em>
                         <ul>
                             <li><a href="#">애경복지재단</a></li>
                         </ul>
                     </li>
                 </ul>
             </li>
+            <em></em>
             <li>
                 <h3><a href="#">뉴스룸</a></h3>
                 <ul>
                     <li>
                         <ul>
+                            <li><a href="#">애경뉴스</a></li>
+                        </ul>
+                        <em></em>
+                        <ul>
                             <li><a href="#">웹진</a></li>
                             <li><a href="#">ON AEKYUNG</a></li>
                         </ul>
+                        <em></em>
                         <ul>
                             <li><a href="#">소셜미디어</a></li>
                             <li><a href="#">Facebook</a></li>
@@ -92,6 +114,7 @@
                     </li>
                 </ul>
             </li>
+            <em></em>
             <li>
                 <h3><a href="#">IR</a></h3>
                 <ul>
@@ -101,17 +124,20 @@
                             <li><a href="#">기업지배구조</a></li>
                             <li><a href="#">기업지배구조헌장</a></li>
                         </ul>
+                        <em></em>
                         <ul>
                             <li><a href="#">재무정보</a></li>
                             <li><a href="#">재무상태표</a></li>
                             <li><a href="#">손익계산서</a></li>
                             <li><a href="#">현금흐름표</a></li>
                         </ul>
+                        <em></em>
                         <ul>
                             <li><a href="#">공시정보</a></li>
                             <li><a href="#">공시자료</a></li>
                             <li><a href="#">공고</a></li>
                         </ul>
+                        <em></em>
                         <ul>
                             <li><a href="#">IR 정보</a></li>
                             <li><a href="#">Contact IR</a></li>
