--- a/ir_business.html
+++ b/ir_business.html
@@ -173,7 +173,16 @@
         <h2 class="tit"><span class="tk-arboria">IR</span> 정보</h2>
         <p class="desc">AK홀딩스는 주주와의 소통을 통해<br class="mo">사회적 책임경영을 실전하고자 노력하고 있습니다</p>
     </div>
-    <div class="visual" style="background-image:url(../ak/images/img_ir.png)"></div>
+    <div class="visual" style="background-image:url(../ak/images/img_ir.png)">
+        <div class="top-tab">
+            <ul>
+                <!-- active: 활성화시 li에 .active 추가 -->
+                <li><a href="javascript:;">Contact IR</a></li>
+                <li class="active"><a href="javascript:;">사업보고서</a></li>
+                <li><a href="./ir_inspect.html">감사보고서</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
 <!--//visual 영역-->
 <!--본문영역-->
