--- a/value_founded.html
+++ b/value_founded.html
@@ -177,13 +177,14 @@
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
-                <li><a href="#">창업이념</a></li>
-                <li class="active"><a href="#">경영이념</a></li>
+                <li class="active"><a href="#">창업이념</a></li>
+                <li><a href="#">경영이념</a></li>
                 <li><a href="#">인재상</a></li>
                 <li><a href="#">가치체계도</a></li>
-                <lik><a href="#">미션과 비전</a></lik>
+                <li><a href="#">미션과 비전</a></li>
             </ul>
-        </div></div>
+        </div>
+    </div>
 </div>
 <!--//visual 영역-->
 <!--본문영역-->
