--- a/ak_news_detail.html
+++ b/ak_news_detail.html
@@ -11,14 +11,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="title" content="뉴스룸 | AK 홀딩스" />
+    <meta name="title" content="애경뉴스 | AK 홀딩스" />
     <meta name="description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다." />
-    <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, 뉴스룸" />
-    <meta name="og:site_name" content="AK 홀딩스 뉴스룸" />
-    <meta name="og:title" content="AK 홀딩스 뉴스룸" />
+    <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, 애경뉴스" />
+    <meta name="og:site_name" content="AK 홀딩스 애경뉴스" />
+    <meta name="og:title" content="AK 홀딩스 애경뉴스" />
     <meta name="og:description" content="기계가 웹페이지를 효과적으로 이해할 수 있도록 사용하는 메타 태그에 대해서 알아보겠습니다."/>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <title>AK 홀딩스 뉴스룸</title>
+    <title>애경뉴스 | AK 홀딩스</title>
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
