--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1 style="padding: 30px;margin: 0 auto;font-size: 30px;font-weight: 700;">AK 홀딩스 퍼블리싱 리스트</h1>
-<table class="bbsTbl pc">
+<table class="bbsTbl">
     <colgroup>
         <col width="12%">
         <col width="*">
