--- a/ir_inspect.html
+++ b/ir_inspect.html
@@ -173,7 +173,7 @@
         <h2 class="tit"><span class="tk-arboria">IR</span> 정보</h2>
         <p class="desc">AK홀딩스는 주주와의 소통을 통해<br class="mo">사회적 책임경영을 실전하고자 노력하고 있습니다</p>
     </div>
-    <div class="visual" style="background-image:url(../ak/images/img_ir.png)">
+    <div class="visual has-tab" style="background-image:url(../ak/images/img_ir.png)">
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
