--- a/investment_info.html
+++ b/investment_info.html
@@ -173,7 +173,7 @@
         <h2 class="tit">공시정보</h2>
         <p class="desc">사업 실적을 포함한 각종 투자 관련 정보 및<br class="mo">공시 자료를 제공합니다</p>
     </div>
-    <div class="visual" style="background-image:url(../ak/images/img_investment.png)">
+    <div class="visual has-tab" style="background-image:url(../ak/images/img_investment.png)">
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
