--- a/value_management.html
+++ b/value_management.html
@@ -26,6 +26,26 @@
             <img src="../ak/images/ico_quotes.png" alt="큰따옴표 이미지">
         </div>
         <p class="sub-desc fw-300">경쟁에서 앞서가는 기업은<br class="mo"> 이윤을 창조하고 지속적인 성장을 함으로써<br> 국가와 사회에 풍요롭고 행복한<br class="mo"> 삶을 창조합니다.</p>
+        <ul class="ak-value-list">
+            <li>
+                <div class="inner">
+                    <em class="tit">앞서가는 경영</em>
+                    <p class="desc">경영자, 관리자들이 탁월한 경영관리 능력으로<br>앞서가는 기업이 되도록 한다</p>
+                </div>
+            </li>
+            <li>
+                <div class="inner">
+                    <em class="tit">앞서가는 사고</em>
+                    <p class="desc">영원한 미래를 바라보며 모든 임직원이<br> 긍정적이고 진취적인 사고를 갖는다</p>
+                </div>
+            </li>
+            <li>
+                <div class="inner">
+                    <em class="tit">앞서가는 기술</em>
+                    <p class="desc">경쟁사보다 앞선 기술로<br> 고객들이 만족할 수 있는 제품을 만든다</p>
+                </div>
+            </li>
+        </ul>
     </div>
 </div>
 <!--//본문영역-->
