--- a/value_management.html
+++ b/value_management.html
@@ -22,8 +22,8 @@
 <div class="content">
     <div class="cont pd-rl-20">
         <strong class="cont_tit">풍요롭고 행복한 삶을<br class="mo">창조하는 기업</strong>
-        <div class="black-quotes">
-            <img src="../ak/images/ico_quotes.png" alt="큰따옴표 이미지">
+        <div class="quotes">
+            <img src="../ak/images/ico_quotes_black.png" alt="큰따옴표 이미지">
         </div>
         <p class="sub-desc fw-300">경쟁에서 앞서가는 기업은<br class="mo"> 이윤을 창조하고 지속적인 성장을 함으로써<br> 국가와 사회에 풍요롭고 행복한<br class="mo"> 삶을 창조합니다.</p>
         <ul class="ak-value-list">
