--- a/value_talent.html
+++ b/value_talent.html
@@ -196,17 +196,18 @@
             </div>
             <div class="desc-wrap">
                 <div class="quotes">
-                    <img src="../ak/images/ico_quotes_blue.png" alt="큰따옴표 이미지">
+                    <img src="../ak/images/ico_quotes_blue.png" alt="큰따옴표 이미지" class="mo">
+                    <img src="../ak/images/ico_quotes_black.png" alt="큰따옴표 이미지" class="pc">
                 </div>
                 <em class="tit">
                     애경은 사람을 사랑하고<br> 존경하는 마음을 가진 사람들이<br class="mo"> 함께합니다.
                 </em>
-                <p>애경인은 사랑하고 존경하는 마음으로
-                    고객과 사회에 한 걸음 더 다가가서
-                    그들이 필요로 하는 가치를 찾기 위해 노력하고,
-                    투명한 정도와 신뢰, 그리고 끊임없는 도전과
-                    혁신을 통해 그것을 제공함으로써
-                    사람의 삶을 더욱 아름답고
+                <p>애경인은 사랑하고 존경하는 마음으로<br class="mo">
+                    고객과 사회에 한 걸음 더 다가가서<br>
+                    그들이 필요로 하는 가치를 찾기 위해 노력하고,<br class="mo">
+                    투명한 정도와 신뢰,<br class="pc"> 그리고 끊임없는 도전과<br class="mo">
+                    혁신을 통해 그것을 제공함으로써<br>
+                    사람의 삶을 더욱 아름답고<br class="mo">
                     풍요롭게 만들기 위해 끊임없이 노력합니다.</p>
             </div>
         </div>
