--- a/value_talent.html
+++ b/value_talent.html
@@ -192,7 +192,9 @@
     <div class="cont">
         <div class="value-talent">
             <div class="visual-wrap">
-                <span>사랑합니다<br>존경합니다</span>
+                <span>
+                    <img src="../ak/images/img_love_respect.png" alt="">
+                </span>
             </div>
             <div class="desc-wrap">
                 <div class="quotes">
