--- a/introduce_ceo.html
+++ b/introduce_ceo.html
@@ -18,7 +18,7 @@
     <meta name="og:title" content="AK 홀딩스 손익계산서" />
     <meta name="og:description" content="기계가 웹페이지를 효과적으로 이해할 수 있도록 사용하는 메타 태그에 대해서 알아보겠습니다."/>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <title>애경가치 | AK 홀딩스</title>
+    <title>회사 소개 | AK 홀딩스</title>
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
@@ -170,18 +170,16 @@
 <!--visual 영역-->
 <div class="topArea sub">
     <div class="titArea">
-        <h2 class="tit">애경 가치</h2>
-        <p class="desc">풍요롭고 행복한 삶을 창조하는 기업입니다</p>
+        <h2 class="tit">회사 소개</h2>
+        <p class="desc">AK홀딩스의 기업 정보를 확인하실 수 있습니다</p>
     </div>
-    <div class="visual" style="background-image:url(../ak/images/img_value.png)">
+    <div class="visual" style="background-image:url(../ak/images/Img_introduce_company.png)">
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
-                <li><a href="./value_founded.html">창업이념</a></li>
-                <li><a href="./value_management.html">경영이념</a></li>
-                <li class="active"><a href="javascript:;">인재상</a></li>
-                <li><a href="javascript:;">가치체계도</a></li>
-                <li><a href="javascript:;">미션과 비전</a></li>
+                <li class="active"><a href="javascript:;">CEO Message</a></li>
+                <li><a href="javascript:;">홀딩스 역할</a></li>
+                <li><a href="javascript:;">거버넌스 구조</a></li>
             </ul>
         </div>
     </div>
@@ -189,30 +187,77 @@
 <!--//visual 영역-->
 <!--본문영역-->
 <div class="content">
-    <div class="cont">
-        <div class="value-talent">
-            <div class="visual-wrap">
-                <span>
-                    <img src="../ak/images/img_love_respect.png" alt="사랑합니다 존경합니다">
-                </span>
-            </div>
-            <div class="desc-wrap">
-                <div class="quotes">
-                    <img src="../ak/images/ico_quotes_blue.png" alt="큰따옴표 이미지" class="mo">
-                    <img src="../ak/images/ico_quotes_black.png" alt="큰따옴표 이미지" class="pc">
-                </div>
-                <em class="tit">
-                    애경은 사람을 사랑하고<br> 존경하는 마음을 가진 사람들이<br class="mo"> 함께합니다.
-                </em>
-                <p>애경인은 사랑하고 존경하는 마음으로<br class="mo">
-                    고객과 사회에 한 걸음 더 다가가서<br>
-                    그들이 필요로 하는 가치를 찾기 위해 노력하고,<br class="mo">
-                    투명한 정도와 신뢰,<br class="pc"> 그리고 끊임없는 도전과<br class="mo">
-                    혁신을 통해 그것을 제공함으로써<br>
-                    사람의 삶을 더욱 아름답고<br class="mo">
-                    풍요롭게 만들기 위해 끊임없이 노력합니다.</p>
-            </div>
+    <div class="ceo-message">
+        <p class="cont_tit"><em>사랑(愛)과 존경(敬)의 정신을 바탕으로</em><br>
+            다양한 이해관계자, 그리고 고객과 함께<br>
+            꾸준히 성장해 나가겠습니다.</p>
+        <div class="ceo-img-wrap">
+            <span class="img-wrap">
+                <img src="../ak/images/img_ceo.png" alt="애경홀딩스 대표이사 이석주 사진">
+            </span>
+            <p class="name">애경홀딩스 대표이사 <em>이</em><em>석</em><em>주</em></p>
         </div>
+        <p class="desc">
+            애경그룹은 지난 68년간 고객의 신뢰 속에서<br>
+            다양한 이해관계자들과 협력하며 지속적인<br class="mo">
+            성장을 이루어 왔습니다.<br><br>
+            꾸준한 믿음과 사랑을 보내주시는 여러분께깊은 감사 드립니다.<br><br>
+            애경그룹은 팬데믹을 지나 새로운 도약을
+            준비하며 견고한 100년 애경이 되기 위해
+            노력하고 있습니다.<br class="pc">언제나 기본에 충실함을
+            잊지 않고 포용과 협력의 정신으로 지속 가능한 기업이 되기 위해 최선을 다하겠습니다.
+        </p>
+    </div>
+    <div class="message-list">
+        <ul>
+            <li>
+                <em class="tit">기본에 충실한 애경</em>
+                <p class="desc">사랑과 존경에 대한 철학은 애경의 기업이념이자,
+                    인간과 미래의 행복을 추구하는 ESG의 정신과도
+                    닮아 있습니다.<br>
+                    이에, 지속가능경영을 위한 ESG의 실천은 곧
+                    애경의 소명이자 존재의 이유입니다.<br>
+                    기업이 법적, 윤리적 책임을 다할 때에 그룹의
+                    지속성장을 이룰 수 있다는 믿음을 바탕으로
+                    준법경영을 실천하며 원칙과 절차를 충실히
+                    이행해 나가고 있습니다. 더불어 AK홀딩스는
+                    사외이사 주도의 거버넌스 위원회를 설치해
+                    지배구조의 투명성 제고 및 주주가치 극대화를
+                    실행하고 있으며, 각 계열사 경영진과 함께
+                    환경(E) 및 인권(S) 관련 개선과제를 제시하며
+                    실행하고 있습니다.
+                </p>
+            </li>
+            <li>
+                <em class="tit">포용과 협력의 애경</em>
+                <p class="desc">사람에 대한 배려와 다양성을 존중하는 애경은
+                    이해관계자를 존중하고 환경을 보호하며 사회적
+                    책임을 다하여 공생의 가치를 실현합니다.
+                    다양성을 이해하고 포용하는 조직은 개인의
+                    역량을 최대한 발휘하고 창의력과 혁신을 발산할
+                    수 있는 힘을 가집니다. 대내외의 이해관계자와
+                    협력하며 더 큰 시너지를 만들어 가겠습니다.
+                </p>
+            </li>
+            <li>
+                <em class="tit">그 이상의 도전</em>
+                <p class="desc">애경은 생활용품사업으로 시작하여 화학·유통·
+                    부동산·항공·IT에 이르기까지 사업을
+                    다각화하며 꾸준히 성장해 왔습니다.
+                    미래 생존을 위해 우리의 고유가치는 견고히
+                    다지면서 그 이상의 용기와 도전을 보여야 할
+                    때라고 생각합니다. 각 계열사의 역량을 더욱
+                    강화하고 차별화된 전략과 실행력으로
+                    기업가치를 제고하고, 고객·사회·주주·구성원·
+                    협력사로부터 신뢰받는 지속가능경영 체계를
+                    만들기 위해 노력하겠습니다.
+                </p>
+            </li>
+        </ul>
+    </div>
+    <div class="catchphrase">
+        <img src="../ak/images/img_copy_mo.png" alt="사랑합니다. 그리고존경합니다." class="mo">
+        <img src="../ak/images/img_copy_pc.png" alt="사랑합니다. 그리고존경합니다." class="pc">
     </div>
 </div>
 <!--//본문영역-->
