--- a/ir_governance.html
+++ b/ir_governance.html
@@ -262,6 +262,9 @@
                     </tr>
                 </tbody>
             </table>
+            <div class="drag-noti mo">
+                <img src="../ak/images/img_drag.png" alt="좌우로 드레그 해보세요">
+            </div>
         </div>
 
         <em class="cont_tit">제52기 정기주주총회<br class="mo"> 의결권 행사 결과</em>
@@ -372,6 +375,9 @@
                 </tr>
                 </tbody>
             </table>
+            <div class="drag-noti mo">
+                <img src="../ak/images/img_drag.png" alt="좌우로 드레그 해보세요">
+            </div>
         </div>
         <ul class="notice-list">
             <li>
