--- a/financial_cash2021.html
+++ b/financial_cash2021.html
@@ -11,14 +11,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="title" content="뉴스룸 | AK 홀딩스" />
+    <meta name="title" content="2021년 현금흐름표 | AK 홀딩스" />
     <meta name="description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다." />
-    <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, 뉴스룸" />
-    <meta name="og:site_name" content="AK 홀딩스 뉴스룸" />
-    <meta name="og:title" content="AK 홀딩스 뉴스룸" />
-    <meta name="og:description" content="기계가 웹페이지를 효과적으로 이해할 수 있도록 사용하는 메타 태그에 대해서 알아보겠습니다."/>
+    <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, 현금흐름표" />
+    <meta name="og:site_name" content="AK 홀딩스 현금흐름표" />
+    <meta name="og:title" content="AK 홀딩스 현금흐름표" />
+    <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <title>AK 홀딩스 뉴스룸</title>
+    <title>2021년 현금흐름표 | AK 홀딩스</title>
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
@@ -32,8 +33,8 @@
             <ul>
                 <li><a href="#">그룹 소개</a></li>
                 <li><a href="#">애경 ESG</a></li>
-                <li class="active"><a href="#">뉴스룸</a></li>
-                <li><a href="#">IR</a></li>
+                <li><a href="#">뉴스룸</a></li>
+                <li class="active"><a href="#">IR</a></li>
             </ul>
         </div>
         <button class="btn-show-menu" id="btnShowMenu" />
@@ -113,7 +114,7 @@
                 <ul>
                     <li>
                         <ul>
-                            <li class="active"><a href="#">애경뉴스</a></li>
+                            <li><a href="#">애경뉴스</a></li>
                         </ul>
                         <em></em>
                         <ul>
@@ -143,7 +144,7 @@
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="#">재무정보</a></li>
+                            <li class="active"><a href="#">재무정보</a></li>
                             <li><a href="#">재무상태표</a></li>
                             <li><a href="#">손익계산서</a></li>
                             <li><a href="#">현금흐름표</a></li>
@@ -173,7 +174,16 @@
         <h2 class="tit">현금흐름표</h2>
         <p class="desc">사업 실적을 포함한<br class="mo">각종 투자 관련 정보를 제공합니다</p>
     </div>
-    <div class="visual" style="background-image:url(../ak/images/img_financial.png)"></div>
+    <div class="visual has-tab" style="background-image:url(../ak/images/img_financial.png)">
+        <div class="top-tab">
+            <ul>
+                <!-- active: 활성화시 li에 .active 추가 -->
+                <li><a href="javascript:;">재무상태표</a></li>
+                <li><a href="./financial_statement2021.html">손익계산서</a></li>
+                <li class="active"><a href="./financial_cash2021.html">현금흐름표</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
 <!--//visual 영역-->
 <!--본문영역-->
