--- a/introduce_ci.html
+++ b/introduce_ci.html
@@ -11,12 +11,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="title" content="2021년 손익계산서 | AK 홀딩스" />
+    <meta name="title" content="Corporate Identity | AK 홀딩스" />
     <meta name="description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다." />
-    <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, 손익계산서" />
-    <meta name="og:site_name" content="AK 홀딩스 손익계산서" />
-    <meta name="og:title" content="AK 홀딩스 손익계산서" />
-    <meta name="og:description" content="기계가 웹페이지를 효과적으로 이해할 수 있도록 사용하는 메타 태그에 대해서 알아보겠습니다."/>
+    <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, Corporate Identity" />
+    <meta name="og:site_name" content="AK 홀딩스 Corporate Identity" />
+    <meta name="og:title" content="AK 홀딩스 Corporate Identity" />
+    <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>Corporate Identity | AK 홀딩스</title>
 </head>
@@ -173,7 +174,7 @@
         <h2 class="tit"><span class="tk-arboria">Corporate Identity</span></h2>
         <p class="desc">브랜드 이미지를 시각적으로 표현하고 있습니다</p>
     </div>
-    <div class="visual" style="background-image:url(../ak/images/img_introduce.png)">
+    <div class="visual has-tab" style="background-image:url(../ak/images/img_introduce.png)">
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
