--- a/investment_info.html
+++ b/investment_info.html
@@ -11,14 +11,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="title" content="공시정보 | AK 홀딩스" />
+    <meta name="title" content="공시자료 | AK 홀딩스" />
     <meta name="description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다." />
-    <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, 공시정보" />
-    <meta name="og:site_name" content="AK 홀딩스 공시정보" />
-    <meta name="og:title" content="AK 홀딩스 공시정보" />
+    <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, 공시자료" />
+    <meta name="og:site_name" content="AK 홀딩스 공시자료" />
+    <meta name="og:title" content="AK 홀딩스 공시자료" />
     <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <title>공시정보 | AK 홀딩스</title>
+    <title>공시자료 | AK 홀딩스</title>
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
