--- a/investment_info_list.html
+++ b/investment_info_list.html
@@ -11,14 +11,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="title" content="공시정보 | AK 홀딩스" />
+    <meta name="title" content="공고 | AK 홀딩스" />
     <meta name="description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다." />
-    <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, 공시정보" />
-    <meta name="og:site_name" content="AK 홀딩스 공시정보" />
-    <meta name="og:title" content="AK 홀딩스 공시정보" />
+    <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, 공고" />
+    <meta name="og:site_name" content="AK 홀딩스 공고" />
+    <meta name="og:title" content="AK 홀딩스 공고" />
     <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <title>공시정보 | AK 홀딩스</title>
+    <title>공고 | AK 홀딩스</title>
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
@@ -173,7 +174,7 @@
         <h2 class="tit">공시정보</h2>
         <p class="desc">사업 실적을 포함한 각종 투자 관련 정보 및<br class="mo">공시 자료를 제공합니다</p>
     </div>
-    <div class="visual" style="background-image:url(../ak/images/img_investment.png)">
+    <div class="visual has-tab" style="background-image:url(../ak/images/img_investment.png)"><!-- 6/2업데이트 - .has-tab 추가 -->
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
