--- a/ir_governance.html
+++ b/ir_governance.html
@@ -11,14 +11,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="title" content="IR 정보 | AK 홀딩스" />
+    <meta name="title" content="기업지배구조 | AK 홀딩스" />
     <meta name="description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다." />
-    <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, IR 정보" />
-    <meta name="og:site_name" content="AK 홀딩스 IR 정보" />
-    <meta name="og:title" content="AK 홀딩스 IR 정보" />
+    <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, 기업지배구조" />
+    <meta name="og:site_name" content="AK 홀딩스 기업지배구조" />
+    <meta name="og:title" content="AK 홀딩스 기업지배구조" />
     <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <title>지배구조 | AK 홀딩스</title>
+    <title>기업지배구조 | AK 홀딩스</title>
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
@@ -174,7 +175,7 @@
         <p class="desc">투명한 지배구조 확립을 통해<br class="mo">
             사회적 요구에 부응하겠습니다</p>
     </div>
-    <div class="visual" style="background-image:url(../ak/images/img_ir_governance.png)">
+    <div class="visual has-tab" style="background-image:url(../ak/images/img_ir_governance.png)"><!-- 6/2업데이트 - .has-tab 추가 -->
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
@@ -422,7 +423,7 @@
             <li>
                 <span class="value">사내이사</span>
                 <div class="name">
-                    <em>이 상 신</em>
+                    <em>이 장 환</em>
                     <span>CFO</span>
                     <span class="date">2022.03.29 선임</span>
                 </div>
@@ -430,7 +431,7 @@
             <li>
                 <span class="value">사내이사</span>
                 <div class="name">
-                    <em>이 장 환</em>
+                    <em>이 상 신</em>
                     <span>CHRO</span>
                     <span class="date">2022.03.29 선임</span>
                 </div>
