--- a/ir_inspect.html
+++ b/ir_inspect.html
@@ -11,14 +11,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="title" content="IR 정보 | AK 홀딩스" />
+    <meta name="title" content="감사보고서 | AK 홀딩스" />
     <meta name="description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다." />
-    <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, IR 정보" />
-    <meta name="og:site_name" content="AK 홀딩스 IR 정보" />
-    <meta name="og:title" content="AK 홀딩스 IR 정보" />
+    <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, 감사보고서" />
+    <meta name="og:site_name" content="AK 홀딩스 감사보고서" />
+    <meta name="og:title" content="AK 홀딩스 감사보고서" />
     <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <title>IR 정보 | AK 홀딩스</title>
+    <title>감사보고서 | AK 홀딩스</title>
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
@@ -173,7 +174,7 @@
         <h2 class="tit"><span class="tk-arboria">IR</span> 정보</h2>
         <p class="desc">AK홀딩스는 주주와의 소통을 통해<br class="mo">사회적 책임경영을 실전하고자 노력하고 있습니다</p>
     </div>
-    <div class="visual" style="background-image:url(../ak/images/img_ir.png)">
+    <div class="visual has-tab" style="background-image:url(../ak/images/img_ir.png)"><!-- 6/2업데이트 - .has-tab 추가 -->
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
