--- a/value_talent.html
+++ b/value_talent.html
@@ -16,7 +16,8 @@
     <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, 손익계산서" />
     <meta name="og:site_name" content="AK 홀딩스 손익계산서" />
     <meta name="og:title" content="AK 홀딩스 손익계산서" />
-    <meta name="og:description" content="기계가 웹페이지를 효과적으로 이해할 수 있도록 사용하는 메타 태그에 대해서 알아보겠습니다."/>
+    <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>애경가치 | AK 홀딩스</title>
 </head>
@@ -173,15 +174,15 @@
         <h2 class="tit">애경 가치</h2>
         <p class="desc">풍요롭고 행복한 삶을 창조하는 기업입니다</p>
     </div>
-    <div class="visual" style="background-image:url(../ak/images/img_value.png)">
+    <div class="visual has-tab" style="background-image:url(../ak/images/img_value.png)"> <!-- 6/2업데이트 - .has-tab 추가 -->
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
                 <li><a href="./value_founded.html">창업이념</a></li>
                 <li><a href="./value_management.html">경영이념</a></li>
                 <li class="active"><a href="javascript:;">인재상</a></li>
-                <li><a href="javascript:;">가치체계도</a></li>
-                <li><a href="javascript:;">미션과 비전</a></li>
+                <li class="tow-nd"><a href="javascript:;">가치체계도</a></li>
+                <li class="tow-nd"><a href="javascript:;">미션과 비전</a></li>
             </ul>
         </div>
     </div>
