--- a/ak_news.html
+++ b/ak_news.html
@@ -16,7 +16,8 @@
     <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, 애경뉴스" />
     <meta name="og:site_name" content="AK 홀딩스 애경뉴스" />
     <meta name="og:title" content="AK 홀딩스 애경뉴스" />
-    <meta name="og:description" content="기계가 웹페이지를 효과적으로 이해할 수 있도록 사용하는 메타 태그에 대해서 알아보겠습니다."/>
+    <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>애경뉴스 | AK 홀딩스</title>
 </head>
@@ -173,7 +174,7 @@
         <h2 class="tit">애경뉴스</h2>
         <p class="desc">애경그룹의 최신 소식을 전해드립니다</p>
     </div>
-    <div class="visual" style="background-image:url(../ak/images/img_esgNews.png)">
+    <div class="visual" style="background-image:url(../ak/images/img_akNews.png)">
     </div>
 </div>
 <!--//visual 영역-->
