--- a/ak_news_detail.html
+++ b/ak_news_detail.html
@@ -16,7 +16,8 @@
     <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, 애경뉴스" />
     <meta name="og:site_name" content="AK 홀딩스 애경뉴스" />
     <meta name="og:title" content="AK 홀딩스 애경뉴스" />
-    <meta name="og:description" content="기계가 웹페이지를 효과적으로 이해할 수 있도록 사용하는 메타 태그에 대해서 알아보겠습니다."/>
+    <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>애경뉴스 | AK 홀딩스</title>
 </head>
@@ -32,7 +33,7 @@
             <ul>
                 <li><a href="#">그룹 소개</a></li>
                 <li><a href="#">애경 ESG</a></li>
-                <li class="active"><a href="#">뉴스룸</a></li>
+                <li><a href="#">뉴스룸</a></li>
                 <li><a href="#">IR</a></li>
             </ul>
         </div>
@@ -48,27 +49,25 @@
                             <!-- 메뉴 활성화시 아래 li에 .active 추가 -->
                             <li><a href="#">애경 가치</a></li>
                             <li><a href="#">창업이념</a></li>
+                            <li><a href="#">경영이념</a></li>
                             <li><a href="#">인재상</a></li>
-                            <li><a href="#">가치체계도</a></li>
-                            <li><a href="#">인재상</a></li>
-                            <li><a href="#">가치체계도</a></li>
-                            <li><a href="#">미션과 비전</a></li>
+                            <li class="tow-nd"><a href="#">가치체계도</a></li>
+                            <li class="tow-nd"><a href="#">미션과 비전</a></li>
                         </ul>
                         <em></em>
                         <ul>
                             <li><a href="#">Corporate Identity</a></li>
                             <li><a href="#">의미</a></li>
-                            <li><a href="#">로고 규정</a></li>
+                            <li class="tow-nd"><a href="#">로고 규정</a></li>
                         </ul>
                         <em></em>
                         <ul>
                             <li><a href="#">회사 소개</a></li>
                             <li><a href="#">CEO Message</a></li>
-                            <li><a href="#">홀딩스 역할</a></li>
-                            <li><a href="#">거버넌스 구조</a></li>
+                            <li class="tow-nd"><a href="#">홀딩스 역할</a></li>
+                            <li class="tow-nd"><a href="#">거버넌스 구조</a></li>
                         </ul>
-                        <em></em>
-                        <ul>
+                        <ul class="tow-nd">
                             <li><a href="#">계열사 소개</a></li>
                         </ul>
                         <em></em>
@@ -87,21 +86,19 @@
                             <li><a href="#">ESG 경영</a></li>
                             <li><a href="#">ESG 경영 목표</a></li>
                             <li><a href="#">ESG 등급</a></li>
-                            <li><a href="#">다양성과 포용성</a></li>
-                            <li><a href="#">ESG 추진체계(조직)</a></li>
-                            <li><a href="#">지속가능경영 보고서</a></li>
+                            <li class="tow-nd"><a href="#">다양성과 포용성</a></li>
+                            <li class="tow-nd"><a href="#">ESG 추진체계(조직)</a></li>
+                            <li class="tow-nd"><a href="#">지속가능경영 보고서</a></li>
                         </ul>
                         <em></em>
                         <ul>
                             <li><a href="#">ESG 소식</a></li>
                         </ul>
-                        <em></em>
-                        <ul>
+                        <ul class="tow-nd">
                             <li><a href="#">윤리경영</a></li>
                             <li><a href="#">윤리제보관리시스템</a></li>
                         </ul>
-                        <em></em>
-                        <ul>
+                        <ul class="tow-nd">
                             <li><a href="#">애경복지재단</a></li>
                         </ul>
                     </li>
@@ -113,15 +110,13 @@
                 <ul>
                     <li>
                         <ul>
-                            <li class="active"><a href="#">애경뉴스</a></li>
+                            <li><a href="#">애경뉴스</a></li>
                         </ul>
-                        <em></em>
-                        <ul>
+                        <ul class="tow-nd">
                             <li><a href="#">웹진</a></li>
                             <li><a href="#">ON AEKYUNG</a></li>
                         </ul>
-                        <em></em>
-                        <ul>
+                        <ul class="tow-nd">
                             <li><a href="#">소셜미디어</a></li>
                             <li><a href="#">Facebook</a></li>
                             <li><a href="#">Instagram</a></li>
@@ -139,7 +134,7 @@
                         <ul>
                             <li><a href="#">지배구조</a></li>
                             <li><a href="#">기업지배구조</a></li>
-                            <li><a href="#">기업지배구조헌장</a></li>
+                            <li class="tow-nd"><a href="#">기업지배구조헌장</a></li>
                         </ul>
                         <em></em>
                         <ul>
@@ -159,7 +154,7 @@
                             <li><a href="#">IR 정보</a></li>
                             <li><a href="#">Contact IR</a></li>
                             <li><a href="#">사업보고서</a></li>
-                            <li><a href="#">감사보고서</a></li>
+                            <li class="tow-nd"><a href="#">감사보고서</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -173,7 +168,7 @@
         <h2 class="tit">애경뉴스</h2>
         <p class="desc">애경그룹의 최신 소식을 전해드립니다</p>
     </div>
-    <div class="visual" style="background-image:url(../ak/images/img_esgNews.png)"></div>
+    <div class="visual" style="background-image:url(../ak/images/img_akNews.png)"></div> <!-- 6/2업데이트 - 비주얼이미지 경로수정 -->
 </div>
 <!--//visual 영역-->
 <!--본문영역-->
