--- a/esg_management_goal.html
+++ b/esg_management_goal.html
@@ -17,6 +17,7 @@
     <meta name="og:site_name" content="AK 홀딩스 IR 정보" />
     <meta name="og:title" content="AK 홀딩스 IR 정보" />
     <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>ESG 경영 | AK 홀딩스</title>
 </head>
@@ -173,15 +174,15 @@
         <h2 class="tit"><span class="tk-arboria">ESG</span> 경영</h2>
         <p class="desc">지속가능한 사회를 구축하는데 앞장서겠습니다</p>
     </div>
-    <div class="visual" style="background-image:url(../ak/images/img_esg_management.png)">
+    <div class="visual has-tab" style="background-image:url(../ak/images/img_esg_management.png)"><!-- 6/2업데이트 - .has-tab 추가 -->
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
                 <li class="active"><a href="javascript:;">ESG 경영 목표</a></li>
                 <li><a href="javascript:;">ESG 등급</a></li>
-                <li><a href="javascript:;">다양성과 포용성</a></li>
-                <li><a href="javascript:;">ESG 추진체계(조직)</a></li>
-                <li><a href="javascript:;">지속가능경영 보고서</a></li>
+                <li class="tow-nd"><a href="javascript:;">다양성과 포용성</a></li>
+                <li class="tow-nd"><a href="javascript:;">ESG 추진체계(조직)</a></li>
+                <li class="tow-nd"><a href="javascript:;">지속가능경영 보고서</a></li>
             </ul>
         </div>
     </div>
