--- a/financial_cash2019.html
+++ b/financial_cash2019.html
@@ -1,21 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-M5JGW9K');</script>
+    <!-- End Google Tag Manager -->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="title" content="2019년 현금흐름표 | AK 홀딩스" />
+    <meta name="description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다." />
+    <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, 현금흐름표" />
+    <meta name="og:site_name" content="AK 홀딩스 현금흐름표" />
+    <meta name="og:title" content="AK 홀딩스 현금흐름표" />
+    <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <title>재무정보</title>
+    <title>2019년 현금흐름표 | AK 홀딩스</title>
 </head>
 <body>
-<div>GNB영역</div>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M5JGW9K"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+<header>
+    <div class="head">
+        <h1><a href="#"><img src="./images/logo_w.png" alt="AK 홀딩스 로고"><img src="./images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
+        <div class="quick-menu">
+            <ul>
+                <li><a href="#">그룹 소개</a></li>
+                <li><a href="#">애경 ESG</a></li>
+                <li><a href="#">뉴스룸</a></li>
+                <li class="active"><a href="#">IR</a></li>
+            </ul>
+        </div>
+        <button class="btn-show-menu" id="btnShowMenu" />
+    </div>
+    <nav>
+        <ul>
+            <li>
+                <h3><a href="#">그룹 소개</a></h3>
+                <ul>
+                    <li>
+                        <ul>
+                            <!-- 메뉴 활성화시 아래 li에 .active 추가 -->
+                            <li><a href="#">애경 가치</a></li>
+                            <li><a href="#">창업이념</a></li>
+                            <li><a href="#">인재상</a></li>
+                            <li><a href="#">가치체계도</a></li>
+                            <li><a href="#">인재상</a></li>
+                            <li><a href="#">가치체계도</a></li>
+                            <li><a href="#">미션과 비전</a></li>
+                        </ul>
+                        <em></em>
+                        <ul>
+                            <li><a href="#">Corporate Identity</a></li>
+                            <li><a href="#">의미</a></li>
+                            <li><a href="#">로고 규정</a></li>
+                        </ul>
+                        <em></em>
+                        <ul>
+                            <li><a href="#">회사 소개</a></li>
+                            <li><a href="#">CEO Message</a></li>
+                            <li><a href="#">홀딩스 역할</a></li>
+                            <li><a href="#">거버넌스 구조</a></li>
+                        </ul>
+                        <em></em>
+                        <ul>
+                            <li><a href="#">계열사 소개</a></li>
+                        </ul>
+                        <em></em>
+                        <ul>
+                            <li><a href="#">연혁</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <em></em>
+            <li>
+                <h3><a href="#">애경 ESG</a></h3>
+                <ul>
+                    <li>
+                        <ul>
+                            <li><a href="#">ESG 경영</a></li>
+                            <li><a href="#">ESG 경영 목표</a></li>
+                            <li><a href="#">ESG 등급</a></li>
+                            <li><a href="#">다양성과 포용성</a></li>
+                            <li><a href="#">ESG 추진체계(조직)</a></li>
+                            <li><a href="#">지속가능경영 보고서</a></li>
+                        </ul>
+                        <em></em>
+                        <ul>
+                            <li><a href="#">ESG 소식</a></li>
+                        </ul>
+                        <em></em>
+                        <ul>
+                            <li><a href="#">윤리경영</a></li>
+                            <li><a href="#">윤리제보관리시스템</a></li>
+                        </ul>
+                        <em></em>
+                        <ul>
+                            <li><a href="#">애경복지재단</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <em></em>
+            <li>
+                <h3><a href="#">뉴스룸</a></h3>
+                <ul>
+                    <li>
+                        <ul>
+                            <li><a href="#">애경뉴스</a></li>
+                        </ul>
+                        <em></em>
+                        <ul>
+                            <li><a href="#">웹진</a></li>
+                            <li><a href="#">ON AEKYUNG</a></li>
+                        </ul>
+                        <em></em>
+                        <ul>
+                            <li><a href="#">소셜미디어</a></li>
+                            <li><a href="#">Facebook</a></li>
+                            <li><a href="#">Instagram</a></li>
+                            <li><a href="#">Youtube</a></li>
+                            <li><a href="#">Naver</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <em></em>
+            <li>
+                <h3><a href="#">IR</a></h3>
+                <ul>
+                    <li>
+                        <ul>
+                            <li><a href="#">지배구조</a></li>
+                            <li><a href="#">기업지배구조</a></li>
+                            <li><a href="#">기업지배구조헌장</a></li>
+                        </ul>
+                        <em></em>
+                        <ul>
+                            <li class="active"><a href="#">재무정보</a></li>
+                            <li><a href="#">재무상태표</a></li>
+                            <li><a href="#">손익계산서</a></li>
+                            <li><a href="#">현금흐름표</a></li>
+                        </ul>
+                        <em></em>
+                        <ul>
+                            <li><a href="#">공시정보</a></li>
+                            <li><a href="#">공시자료</a></li>
+                            <li><a href="#">공고</a></li>
+                        </ul>
+                        <em></em>
+                        <ul>
+                            <li><a href="#">IR 정보</a></li>
+                            <li><a href="#">Contact IR</a></li>
+                            <li><a href="#">사업보고서</a></li>
+                            <li><a href="#">감사보고서</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+</header>
 <!--visual 영역-->
-<div class="topArea">
+<div class="topArea sub">
     <div class="titArea">
         <h2 class="tit">현금흐름표</h2>
         <p class="desc">사업 실적을 포함한<br class="mo">각종 투자 관련 정보를 제공합니다</p>
     </div>
-    <div class="visual" style="background-image:url(../ak/images/img_financial.png)"></div>
+    <div class="visual has-tab" style="background-image:url(../ak/images/img_financial.png)">
+        <div class="top-tab">
+            <ul>
+                <!-- active: 활성화시 li에 .active 추가 -->
+                <li><a href="javascript:;">재무상태표</a></li>
+                <li><a href="./financial_statement2021.html">손익계산서</a></li>
+                <li class="active"><a href="./financial_cash2021.html">현금흐름표</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
 <!--//visual 영역-->
 <!--본문영역-->
