--- a/financial_income2019.html
+++ b/financial_income2019.html
@@ -17,6 +17,7 @@
     <meta name="og:site_name" content="AK 홀딩스 재무정보" />
     <meta name="og:title" content="AK 홀딩스 재무정보" />
     <meta name="og:description" content="기계가 웹페이지를 효과적으로 이해할 수 있도록 사용하는 메타 태그에 대해서 알아보겠습니다."/>
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>2019년 재무정보 | AK 홀딩스</title>
 </head>
@@ -173,7 +174,7 @@
         <h2 class="tit">재무상태표</h2>
         <p class="desc">사업 실적을 포함한<br class="mo">각종 투자 관련 정보를 제공합니다</p>
     </div>
-    <div class="visual" style="background-image:url(../ak/images/img_financial.png)">
+    <div class="visual has-tab" style="background-image:url(../ak/images/img_financial.png)">
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
