--- a/financial_statement2021.html
+++ b/financial_statement2021.html
@@ -17,6 +17,7 @@
     <meta name="og:site_name" content="AK 홀딩스 손익계산서" />
     <meta name="og:title" content="AK 홀딩스 손익계산서" />
     <meta name="og:description" content="기계가 웹페이지를 효과적으로 이해할 수 있도록 사용하는 메타 태그에 대해서 알아보겠습니다."/>
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>2021년 손익계산서 | AK 홀딩스</title>
 </head>
