--- a/index.html
+++ b/index.html
@@ -27,21 +27,61 @@
     <tbody>
     <tr>
         <td>1</td>
-        <td>그룹 소개 > 애경 가치</td>
+        <td>그룹 소개 > 창업이념</td>
         <td><a href="./value_founded.html">value_founded.html</a></td>
         <td>5/29업데이트</td>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>그룹 소개 > 경영이념</td>
+        <td><a href="./value_management.html">value_management.html</a></td>
+        <td><p style="color:#ff00ff;">6/2업데이트</p></td>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>그룹 소개 > 인재상</td>
+        <td><a href="./value_talent.html">value_talent.html</a></td>
+        <td><p style="color:#ff00ff;">6/2업데이트</p></td>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>그룹 소개 > Corporate Identity > 의미</td>
+        <td><a href="./introduce_ci.html">introduce_ci.html</a></td>
+        <td><p style="color:#ff00ff;">6/2업데이트</p></td>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>그룹 소개 > 회사소개 > CEO Message</td>
+        <td><a href="./introduce_ceo.html">introduce_ceo.html</a></td>
+        <td><p style="color:#ff00ff;">6/2업데이트</p></td>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>그룹 소개 > ESG 경영 > ESG 경영 목표</td>
+        <td><a href="./esg_management_goal.html">esg_management_goal.html</a></td>
+        <td><p style="color:#ff00ff;">6/2업데이트</p></td>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>그룹 소개 > ESG 경영 > ESG 등급</td>
+        <td><a href="./esg_management_level.html">esg_management_level.html</a></td>
+        <td><p style="color:#ff00ff;">6/2업데이트</p></td>
     </tr>
     <tr>
         <td>2</td>
         <td>뉴스룸 > 애경뉴스 리스트</td>
         <td><a href="./ak_news.html">ak_news.html</a></td>
-        <td>5/29업데이트</td>
+        <td><p>5/29업데이트</p>
+            <p style="color:#ff00ff;">6/2업데이트 - 비주얼이미지 경로수정</p>
+        </td>
     </tr>
     <tr>
         <td>3</td>
         <td>뉴스룸 > 애경뉴스 상세</td>
         <td><a href="./ak_news_detail.html">ak_news_detail.html</a></td>
-        <td>5/29업데이트</td>
+        <td><p>5/29업데이트</p>
+            <p style="color:#ff00ff;">6/2업데이트 - 비주얼이미지 경로수정</p>
+        </td>
     </tr>
     <tr>
         <td>4</td>
@@ -54,6 +94,12 @@
         <td>뉴스룸 > ESG 소식 상세</td>
         <td><a href="./esg_news_detail.html">esg_news_detail.html</a></td>
         <td>5/29업데이트</td>
+    </tr>
+    <tr>
+        <td>6</td>
+        <td>IR > 지배구조</td>
+        <td><a href="./ir_governance.html">ir_governance.html</a></td>
+        <td><p style="color:#ff00ff;">6/2업데이트</p></td>
     </tr>
     <tr>
         <td>6</td>
@@ -105,7 +151,7 @@
     </tr>
     <tr>
         <td>7</td>
-        <td>IR > 손익계산서 20218</td>
+        <td>IR > 손익계산서 2018</td>
         <td><a href="./financial_statement2018.html">financial_statement2018.html</a></td>
         <td>5/29업데이트</td>
     </tr>
@@ -117,9 +163,33 @@
     </tr>
     <tr>
         <td>8</td>
-        <td>IR > 현금흐름표</td>
-        <td><a href="javascript:;"></a></td>
-        <td></td>
+        <td>IR > 현금흐름표 2021</td>
+        <td><a href="./financial_cash2021.html">financial_cash2021.html</a></td>
+        <td ><p style="color:#ff00ff;">6/2업데이트</p></td>
+    </tr>
+    <tr>
+        <td>8</td>
+        <td>IR > 현금흐름표 2020</td>
+        <td><a href="./financial_cash2021.html">financial_cash2020.html</a></td>
+        <td><p style="color:#ff00ff;">6/2업데이트</p></td>
+    </tr>
+    <tr>
+        <td>8</td>
+        <td>IR > 현금흐름표 2019</td>
+        <td><a href="./financial_cash2021.html">financial_cash2019.html</a></td>
+        <td><p style="color:#ff00ff;">6/2업데이트</p></td>
+    </tr>
+    <tr>
+        <td>8</td>
+        <td>IR > 현금흐름표 2018</td>
+        <td><a href="./financial_cash2021.html">financial_cash2018.html</a></td>
+        <td><p style="color:#ff00ff;">6/2업데이트</p></td>
+    </tr>
+    <tr>
+        <td>8</td>
+        <td>IR > 현금흐름표 2017</td>
+        <td><a href="./financial_cash2021.html">financial_cash2017.html</a></td>
+        <td><p style="color:#ff00ff;">6/2업데이트</p></td>
     </tr>
     <tr>
         <td>9</td>
@@ -131,13 +201,15 @@
         <td>10</td>
         <td>IR > 공시정보 > 공고</td>
         <td><a href="./investment_info_list.html">investment_info_list.html</a></td>
-        <td>5/29업데이트</td>
+        <td><p>5/29업데이트</p>
+            <p style="color:#ff00ff;">6/2업데이트 - .has-tab 추가</p>
+        </td>
     </tr>
     <tr>
         <td>12</td>
         <td>IR > IR 정보 > Contact IR</td>
-        <td><a href="javascript:;"></a></td>
-        <td></td>
+        <td><a href="./ir_contact.html">ir_contact.html</a></td>
+        <td><p style="color:#ff00ff;">6/2업데이트</p></td>
     </tr>
     <tr>
         <td>13</td>
