--- a/introduce_ceo.html
+++ b/introduce_ceo.html
@@ -16,7 +16,8 @@
     <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, 손익계산서" />
     <meta name="og:site_name" content="AK 홀딩스 손익계산서" />
     <meta name="og:title" content="AK 홀딩스 손익계산서" />
-    <meta name="og:description" content="기계가 웹페이지를 효과적으로 이해할 수 있도록 사용하는 메타 태그에 대해서 알아보겠습니다."/>
+    <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>회사 소개 | AK 홀딩스</title>
 </head>
@@ -173,13 +174,13 @@
         <h2 class="tit">회사 소개</h2>
         <p class="desc">AK홀딩스의 기업 정보를 확인하실 수 있습니다</p>
     </div>
-    <div class="visual" style="background-image:url(../ak/images/Img_introduce_company.png)">
+    <div class="visual has-tab" style="background-image:url(../ak/images/Img_introduce_company.png)">
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
                 <li class="active"><a href="javascript:;">CEO Message</a></li>
-                <li><a href="javascript:;">홀딩스 역할</a></li>
-                <li><a href="javascript:;">거버넌스 구조</a></li>
+                <li class="tow-nd"><a href="javascript:;">홀딩스 역할</a></li>
+                <li class="tow-nd"><a href="javascript:;">거버넌스 구조</a></li>
             </ul>
         </div>
     </div>
