--- a/value_founded.html
+++ b/value_founded.html
@@ -11,14 +11,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="title" content="애경 가치 | AK 홀딩스" />
+    <meta name="title" content="창업이념 | AK 홀딩스" />
     <meta name="description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다." />
-    <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, 애경 가치" />
-    <meta name="og:site_name" content="AK 홀딩스 애경 가치" />
-    <meta name="og:title" content="AK 홀딩스 애경 가치" />
+    <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, 창업이념" />
+    <meta name="og:site_name" content="AK 홀딩스 창업이념" />
+    <meta name="og:title" content="AK 홀딩스 창업이념" />
     <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <title>애경 가치 | AK 홀딩스</title>
+    <title>창업이념 | AK 홀딩스</title>
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
@@ -173,15 +174,15 @@
         <h2 class="tit">애경 가치</h2>
         <p class="desc">풍요롭고 행복한 삶을 창조하는 기업입니다</p>
     </div>
-    <div class="visual" style="background-image:url(../ak/images/img_value.png)">
+    <div class="visual has-tab" style="background-image:url(../ak/images/img_value.png)"><!-- 6/2업데이트 - .has-tab 추가 -->
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
                 <li class="active"><a href="#">창업이념</a></li>
                 <li><a href="#">경영이념</a></li>
                 <li><a href="#">인재상</a></li>
-                <li><a href="#">가치체계도</a></li>
-                <li><a href="#">미션과 비전</a></li>
+                <li class="tow-nd"><a href="#">가치체계도</a></li>
+                <li class="tow-nd"><a href="#">미션과 비전</a></li>
             </ul>
         </div>
     </div>
