--- a/financial_income2018.html
+++ b/financial_income2018.html
@@ -34,7 +34,7 @@
                 <li><a href="#">그룹 소개</a></li>
                 <li><a href="#">애경 ESG</a></li>
                 <li><a href="#">뉴스룸</a></li>
-                <li class="active"><a href="#">IR</a></li>
+                <li><a href="#">IR</a></li>
             </ul>
         </div>
         <button class="btn-show-menu" id="btnShowMenu" />
@@ -49,27 +49,25 @@
                             <!-- 메뉴 활성화시 아래 li에 .active 추가 -->
                             <li><a href="#">애경 가치</a></li>
                             <li><a href="#">창업이념</a></li>
+                            <li><a href="#">경영이념</a></li>
                             <li><a href="#">인재상</a></li>
-                            <li><a href="#">가치체계도</a></li>
-                            <li><a href="#">인재상</a></li>
-                            <li><a href="#">가치체계도</a></li>
-                            <li><a href="#">미션과 비전</a></li>
+                            <li class="tow-nd"><a href="#">가치체계도</a></li>
+                            <li class="tow-nd"><a href="#">미션과 비전</a></li>
                         </ul>
                         <em></em>
                         <ul>
                             <li><a href="#">Corporate Identity</a></li>
                             <li><a href="#">의미</a></li>
-                            <li><a href="#">로고 규정</a></li>
+                            <li class="tow-nd"><a href="#">로고 규정</a></li>
                         </ul>
                         <em></em>
                         <ul>
                             <li><a href="#">회사 소개</a></li>
                             <li><a href="#">CEO Message</a></li>
-                            <li><a href="#">홀딩스 역할</a></li>
-                            <li><a href="#">거버넌스 구조</a></li>
+                            <li class="tow-nd"><a href="#">홀딩스 역할</a></li>
+                            <li class="tow-nd"><a href="#">거버넌스 구조</a></li>
                         </ul>
-                        <em></em>
-                        <ul>
+                        <ul class="tow-nd">
                             <li><a href="#">계열사 소개</a></li>
                         </ul>
                         <em></em>
@@ -88,21 +86,19 @@
                             <li><a href="#">ESG 경영</a></li>
                             <li><a href="#">ESG 경영 목표</a></li>
                             <li><a href="#">ESG 등급</a></li>
-                            <li><a href="#">다양성과 포용성</a></li>
-                            <li><a href="#">ESG 추진체계(조직)</a></li>
-                            <li><a href="#">지속가능경영 보고서</a></li>
+                            <li class="tow-nd"><a href="#">다양성과 포용성</a></li>
+                            <li class="tow-nd"><a href="#">ESG 추진체계(조직)</a></li>
+                            <li class="tow-nd"><a href="#">지속가능경영 보고서</a></li>
                         </ul>
                         <em></em>
                         <ul>
                             <li><a href="#">ESG 소식</a></li>
                         </ul>
-                        <em></em>
-                        <ul>
+                        <ul class="tow-nd">
                             <li><a href="#">윤리경영</a></li>
                             <li><a href="#">윤리제보관리시스템</a></li>
                         </ul>
-                        <em></em>
-                        <ul>
+                        <ul class="tow-nd">
                             <li><a href="#">애경복지재단</a></li>
                         </ul>
                     </li>
@@ -116,13 +112,11 @@
                         <ul>
                             <li><a href="#">애경뉴스</a></li>
                         </ul>
-                        <em></em>
-                        <ul>
+                        <ul class="tow-nd">
                             <li><a href="#">웹진</a></li>
                             <li><a href="#">ON AEKYUNG</a></li>
                         </ul>
-                        <em></em>
-                        <ul>
+                        <ul class="tow-nd">
                             <li><a href="#">소셜미디어</a></li>
                             <li><a href="#">Facebook</a></li>
                             <li><a href="#">Instagram</a></li>
@@ -140,11 +134,11 @@
                         <ul>
                             <li><a href="#">지배구조</a></li>
                             <li><a href="#">기업지배구조</a></li>
-                            <li><a href="#">기업지배구조헌장</a></li>
+                            <li class="tow-nd"><a href="#">기업지배구조헌장</a></li>
                         </ul>
                         <em></em>
                         <ul>
-                            <li class="active"><a href="#">재무정보</a></li>
+                            <li><a href="#">재무정보</a></li>
                             <li><a href="#">재무상태표</a></li>
                             <li><a href="#">손익계산서</a></li>
                             <li><a href="#">현금흐름표</a></li>
@@ -160,7 +154,7 @@
                             <li><a href="#">IR 정보</a></li>
                             <li><a href="#">Contact IR</a></li>
                             <li><a href="#">사업보고서</a></li>
-                            <li><a href="#">감사보고서</a></li>
+                            <li class="tow-nd"><a href="#">감사보고서</a></li>
                         </ul>
                     </li>
                 </ul>
